<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item

            android:id="@+id/nav_setting"
            android:icon="@drawable/setting"
            android:title="@string/sozlamalar" />
        <item
            android:checkable="false"
            android:id="@+id/nav_about"
            android:icon="@drawable/about_app"
            android:title="@string/dastur_haqida" />
        <item
            android:checkable="false"
            android:id="@+id/nav_apps"
            android:icon="@drawable/more_apps"
            android:title="@string/bizning_dasturlar" />
        <item
            android:id="@+id/nav_question"
            android:checkable="false"
            android:icon="@drawable/questions"
            android:title="@string/faq" />
        <item
            android:checkable="false"
            android:id="@+id/nav_exit"
            android:icon="@drawable/log_out"
            android:title="@string/chiqish" />

    </group>
</menu>