<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_press_alerDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
   android:layout_gravity="center_horizontal"
    android:backgroundTint="#FFFFFF"
    app:cardCornerRadius="16dp"
    app:cardElevation="5dp"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/chiqish_xabari"
            android:textColor="#1C1C1C"
            android:textSize="@dimen/dialog_title_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title_desc_dialog"
            android:layout_width="300dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="35dp"
            android:text="@string/dasturdan_chiqishni_hohlaysizmi"
            android:textColor="@color/black"
            android:textSize="@dimen/standart_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="#8c8c8c" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView

                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/yo_q"
                android:layout_gravity="center_vertical"
                android:textColor="@color/Main_color"
                android:textSize="@dimen/dialog_title_text_size"
                android:textStyle="bold" />

            <View

                android:id="@+id/vertical_view"
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:background="#8c8c8c" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/ha"
                android:textColor="@color/Main_color"
                android:textSize="@dimen/dialog_title_text_size"
                android:layout_gravity="center_vertical"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>