<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main_color"
    android:orientation="vertical"
    tools:context=".fragment.BannerFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/banner_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_bar_height"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/banner_back_press_button"
            android:layout_width="@dimen/backPress_btn_size"
            android:layout_height="@dimen/backPress_btn_size"
            android:src="@drawable/arrow_left" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/banner_item"
        android:layout_marginTop="-70dp"
        android:background="@drawable/banner_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="@dimen/banner_layout_margin_top">

        <TextView
            android:id="@+id/banner_tarif_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="Tarif: Oddiy 10"
            android:textColor="@color/Main_color"
            android:textSize="@dimen/banner_title_text_size" />

        <LinearLayout
            android:layout_width="@dimen/home_banner_width"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abonent_to_lovi"
                android:textColor="@color/black"
                android:textSize="@dimen/standart_text_size" />

            <TextView
                android:id="@+id/banner_tarif_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="10 000 so'm"
                android:textColor="@color/black"
                android:textSize="@dimen/standart_text_size" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/home_banner_width"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/banner_view_margin_top"
            android:layout_marginBottom="10dp"
            android:background="#9C9C9C" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/banner_scroll_height"
            android:orientation="vertical"
            android:scrollbars="none">

            <TextView
                android:id="@+id/banner_tarif_describe"
                android:layout_width="@dimen/home_banner_width"
                android:layout_height="wrap_content"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
                android:textColor="#8C8A8A"
                android:textSize="@dimen/banner_desc_text_size" />
        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:layout_width="@dimen/home_banner_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/banner_inDetail"
                android:layout_width="0dp"
                android:layout_height="@dimen/banner_btn_height"
                android:layout_weight="1"
                android:background="@drawable/cancel_button_background"
                android:text="@string/batafsil"
                android:textAllCaps="false"
                android:textColor="#505050"
                android:textSize="@dimen/banner_btn_text_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="0.4" />

            <Button
                android:id="@+id/banner_connect"
                android:layout_width="0dp"
                android:layout_height="@dimen/banner_btn_height"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@drawable/connect_button_background"
                android:text="@string/ulanish"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/banner_btn_text_size" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/banner_item"
        android:layout_width="@dimen/home_banner_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner_toolbar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/banner_item_background"
        android:orientation="vertical"
        android:paddingVertical="10dp">

        <TextView
            android:id="@+id/banner_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/oddiy_10"
            android:textColor="#FFD12D"
            android:textSize="@dimen/banner_item_title_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/banner_item_icon_size"
                    android:layout_height="@dimen/banner_item_icon_size"
                    android:background="@drawable/banner_item_icon_background"
                    android:padding="7dp"
                    android:src="@drawable/phone" />

                <TextView
                    android:id="@+id/banner_item_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/_10_min"
                    android:textColor="#FFD12D"
                    android:textSize="@dimen/banner_item_icon_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/banner_item_icon_size"
                    android:layout_height="@dimen/banner_item_icon_size"
                    android:background="@drawable/banner_item_icon_background"
                    android:padding="7dp"
                    android:src="@drawable/internet" />

                <TextView
                    android:id="@+id/banner_item_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/_10_mb"
                    android:textColor="#FFD12D"
                    android:textSize="@dimen/banner_item_icon_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/banner_item_icon_size"
                    android:layout_height="@dimen/banner_item_icon_size"
                    android:background="@drawable/banner_item_icon_background"
                    android:padding="7dp"
                    android:src="@drawable/message_square" />

                <TextView
                    android:id="@+id/banner_item_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/_10_sms"
                    android:textColor="#FFD12D"
                    android:textSize="@dimen/banner_item_icon_text_size" />
            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/banner_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/oyiga_10_000_so_m"
            android:textColor="#68D2FF"
            android:textSize="@dimen/banner_item_month_text_size" />
    </LinearLayout>


</RelativeLayout>